package server

import (
	"context"
	"flag"
	"fmt"
	"grpc/service/helloworld"
	"log"
	"net"

	"google.golang.org/grpc"
)

var (
	port = flag.Int("port", 50051, "The server port")
)

// 具体实现 HelloWorldServer
// UnimplementedHelloWorldServer 采用模板方法模式，将具体实现交给子类
type HelloWorldServer struct {
	helloworld.UnimplementedHelloWorldServer
}

func (s *HelloWorldServer) SayHello(ctx context.Context, in *helloworld.HelloRequest) (*helloworld.HelloReply, error) {
	log.Printf("Received: %v", in.GetName())
	return &helloworld.HelloReply{Message: "Hello " + in.GetName()}, nil
}

func main() {
	flag.Parse()
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", *port))
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}
	s := grpc.NewServer()
	helloworld.RegisterHelloWorldServer(s, &HelloWorldServer{})
	log.Printf("server listening at %v", lis.Addr())
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
